k8s/auth-service/auth-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: auth-service
spec:
  to:
    kind: Service
    name: auth-service
  port:
    targetPort: 8080
  tls:
    termination: edge
